--- a/Tesis_Escrito/TeX_files/Bibliography.bib
+++ b/Tesis_Escrito/TeX_files/Bibliography.bib
@@ -104,3 +104,15 @@
 	year={2006},
 	publisher={Springer}
 }
+
+@article{wangpoisson,
+	title={Poisson Process for Bayesian Optimization},
+	author={Wang, Xiaoxing and Li, Jiaxing and Xue, Chao and Liu, Wei and Wang, Chaoyue and Liu, Weifeng and Yang, Xiaokang and Yan, Junchi and Tao, Dacheng}
+}
+
+@inproceedings{shah2013bayesian,
+	title={Bayesian optimization using Student-t Processes},
+	author={Shah, Amar and Wilson, Andrew G and Ghahramani, Zoubin},
+	booktitle={NIPS Workshop on Bayesian Optimization},
+	year={2013}
+}
