Adding visualizations for Alfredo in 1d_BASS folder.

--- a/Code/Discrete/discrete_bass.Rmd
+++ b/Code/Discrete/discrete_bass.Rmd
@@ -7,6 +7,7 @@ output: html_document
 
 ```{r}
 library(BASS)
+library(lhs)
 ```
 
 ```{r}
@@ -50,7 +51,7 @@ get_bass_2d <- function(max_iterations = 10){
   for (iteration in 1:max_iterations) {
     fit <- bass(x_df, y, verbose = FALSE)
     
-    x_new <- matrix(runif(1000 * dims), 1000, dims)
+    x_new <- maximinLHS(1000,dims)
     x_new_df <- data.frame(x_new)
     x_new_df[, 3] <- factor(sample(c("A", "B", "C"), 1000, replace = TRUE))
     pred <- predict(fit, newdata = x_new_df)
@@ -78,6 +79,33 @@ get_bass_2d <- function(max_iterations = 10){
 get_bass_2d()
 
 ```
+
+```{r}
+f <- function(x) {
+  ifelse(x[, 3] == "A",
+         10 * sin(pi * x[, 1] * x[, 2]) + 20 * (x[, 1] - 0.5)^2 + 10 * x[, 2] + 5 * x[, 1],
+         20 * sin(pi * x[, 1] * x[, 2]) + 20 * (x[, 1] - 0.5)^2 + 10 * x[, 2] + 5 * x[, 1])
+}
+
+sigma <- 1  # Noise standard deviation
+
+n0 <- 10
+dims <- 2
+x <- matrix(runif(n0 * dims), n0, dims)
+x_df <- data.frame(x)
+x_df[, 3] <- factor(sample(c("A", "B", "C"), n0, replace = TRUE))
+y <- rnorm(n0, f(x_df), sigma)
+
+fit <- bass(x_df, y, verbose = FALSE)
+
+x_new <- maximinLHS(10,dims)
+x_new_df <- data.frame(x_new)
+x_new_df[, 3] <- factor(sample(c("A", "B", "C"), 10, replace = TRUE))
+pred <- predict(fit, newdata = data.frame(x = x_new_df))
+mu <- apply(pred, 2, mean)
+
+```
+
 
 
 
