--- a/Tesis_Escrito/main.tex
+++ b/Tesis_Escrito/main.tex
@@ -5,6 +5,7 @@
 \usepackage{amsfonts}
 \usepackage{amsmath}
 \usepackage{mathtools}
+\usepackage{dirtytalk}
 
 % To be removed later, since these won't be used in the final version. 
 \usepackage{xcolor}
@@ -24,6 +25,7 @@
 \tableofcontents
 
 \mainmatter
+\include{./TeX_files/Quote}
 \include{./TeX_files/GP}
 \include{./TeX_files/BO}
 \include{./TeX_files/BASS}
